# receptionist-bot-rs

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  manifest.yml
.cargo/: config
crates/rec_lambda_commands/: Cargo.toml
crates/rec_lambda_commands/src/: main.rs
crates/rec_lambda_events/: Cargo.toml
crates/rec_lambda_events/src/: main.rs
crates/rec_lambda_interactions/: Cargo.toml
crates/rec_lambda_interactions/src/: main.rs
crates/rec_server/: Cargo.toml
crates/rec_server/src/: main.rs
crates/rec_server/tests/: integration.rs
crates/rec_server/tests/mocks/: chatbot_views.json  mock_receptionist_responses.json
crates/receptionist/: Cargo.toml
crates/receptionist/src/: config.rs  lib.rs  utils.rs
crates/receptionist/src/database/: cloudformation.rs  dynamo_cf_template.json  dynamodb.rs  in_mem_testdb.rs  mod.rs  traits.rs
crates/receptionist/src/manager_ui/: block_actions.rs  mod.rs  router.rs  state_machine.rs  submission.rs  utils.rs
crates/receptionist/src/pagerduty/: client.rs  models.rs
crates/receptionist/src/response/: actions.rs  conditions.rs  listeners.rs  mod.rs  response.rs  responses.rs  utils.rs
crates/receptionist/src/response2/: actions.rs  conditions.rs  listeners.rs  mod.rs  response.rs  traits.rs
crates/receptionist/src/slack/: api_calls.rs  commands_api.rs  events_api.rs  interaction_api.rs  mod.rs  state_values.rs  utils.rs  verification.rs
crates/receptionist/tests/: generate_previews.rs
crates/receptionist/tests/generated_blocks/: attach_emoji.json  fwd_msg_to_channel.json  match_regex.json  tag_oncall_in_thread.json
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
dockerfiles/: Dockerfile.aws  Dockerfile.local  Dockerfile.localstack
dockerfiles/localstack_dynamodb_setup/: commands.sh  mock-ddb-create.json
docs/: architecture.md  deployments.md  development.md
terraform_aws/config/: config.s3.tfbackend
terraform_aws/remote-state/: .terraform.lock.hcl  main.tf
terraform_aws/server/: .terraform.lock.hcl  main.tf
terraform_aws/serverless/: .terraform.lock.hcl  main.tf
